Fixed Footer Problem On Mobile
fixed a problem where the footer covers :
- About Us Page
- FAQ Page

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     background-color: #858585;
     font-family: Arial, sans-serif;
-    margin-bottom: 150px;
+    margin-bottom: 200px;
 }
 /* Applies styles to images */
 .vdlh {
